@@ -24,6 +24,8 @@
  - Removed Function
 
 0.5
+* equals and hash of Feed and News
+* link between Feed and News
 + Storing time settings
 + Apptitle and version from manifest
 + Storing properties
